feat: allow to disable "core" modules

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -7,14 +7,16 @@
     "goto2" : "Go to 2nd page",
     "features" : {
         "nuxt" : "Nuxt application framework atop Vue.js",
+        "consola" : "Logging with unjs/consola",
+        "eslint" : "Linting for better DevEx",
         "security" : "Nuxt Security module helping with OWASP patterns",
         "image" : "Nuxt Image to optimize use of images",
         "scripts" : "Nuxt Scripts to allow simple execution of external scripts",
         "fonts" : "Nuxt Fonts to allow simple integration of various fonts",
         "pinia" : "Pinia for state management",
         "vueuse" : "VueUse utils available",
+        "time" : "SSR-friendly real time rendering",
         "i18n" : "I18n for translations",
-        "consola" : "Logging with unjs/consola",
         "ui" : "Nuxt UI as UI components library",
         "tailwind" : "Tailwind CSS for styling",
         "icon" : "Icon module for displaying icons",
