feat: add nuxt-auth-utils module

--- a/core/i18n/locales/en.json
+++ b/core/i18n/locales/en.json
@@ -25,6 +25,7 @@
         "formkit" : "FormKit for input forms",
         "content" : "Nuxt Content for creating and editing content",
         "seo" : "Nuxt SEO collection of SEO-related modules",
+        "auth" : "Nuxt Auth Utils for easy and secure authentication",
         "openprops" : "Additional CSS by Open Props"
     }
 }
