feat: add Vueform module

--- a/core/i18n/locales/en.json
+++ b/core/i18n/locales/en.json
@@ -23,6 +23,7 @@
         "supabase" : "Supabase for auth and DB services",
         "neon" : "Neon for DB services",
         "formkit" : "FormKit for input forms",
+        "vueform" : "Vueform for input forms",
         "content" : "Nuxt Content for creating and editing content",
         "seo" : "Nuxt SEO collection of SEO-related modules",
         "auth" : "Nuxt Auth Utils for easy and secure authentication",
