--- a/core/i18n/locales/en.json
+++ b/core/i18n/locales/en.json
@@ -29,6 +29,7 @@
         "content" : "Nuxt Content for creating and editing content",
         "seo" : "Nuxt SEO collection of SEO-related modules",
         "auth" : "Nuxt Auth Utils for easy and secure authentication",
-        "openprops" : "Additional CSS by Open Props"
+        "openprops" : "Additional CSS by Open Props",
+        "equipment" : "Vue Equipment utils available"
     }
 }
